<resources>
    <string name="app_name">newbooks</string>

    <string name="home">Главная</string>
    <string name="catalog">Каталог</string>
    <string name="favorites">Избранное</string>
    <string name="shopping_cart">Корзина</string>
    <string name="more">Еще</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Вход</string>
    <string name="available_books_count">Доступное вам количество книг: %d</string>
    <string name="return_date">Дата возврата:\n30.10.2001</string>
    <string name="available_to_book_count">Доступно: %d</string>
</resources>