<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/catalogFragment"
        android:icon="@drawable/ic_catalog"
        android:title="@string/catalog" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites" />

    <item
        android:id="@+id/shoppingCartFragment"
        android:icon="@drawable/ic_cart"
        android:title="@string/shopping_cart" />

    <item
        android:id="@+id/moreFragment"
        android:icon="@drawable/ic_more"
        android:title="@string/more" />
</menu>